<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>buildfarm_perf_tests</name>
  <version>0.0.0</version>
  <description>Performance tests which run regularly on the buildfarm</description>
  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>system_metrics_collector</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>performance_test</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <!-- For plot generation -->
  <test_depend>python3-matplotlib</test_depend>
  <test_depend>python3-numpy</test_depend>
  <test_depend>python3-pandas</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
